--- a/src/styles/landing.scss
+++ b/src/styles/landing.scss
@@ -18,7 +18,7 @@ body a {
 .Landing {
 	header {
 		width: 30%;
-		color: white;
+		color: black;
 		margin: 50px auto 0px;
 		background: #5f9ea0;
 		text-align: center;
@@ -36,7 +36,7 @@ body a {
 		height: auto;
 	}
 	
-	.header1 {
+	.header1l {
 		background-color: #5f9ea0;
 		color: white;
 		height: 50px;
@@ -49,7 +49,7 @@ body a {
 		font-size: 30px;
 	}
 	
-	.header1 a {
+	.header1l a {
 		color: #fff;
 		text-decoration: none;
 	}
@@ -67,7 +67,7 @@ body a {
 		border-radius: 10px;
 	}
 	
-	.dd {
+	.ddl {
 		border: none;
 	}
 	
@@ -91,18 +91,18 @@ body a {
 		border: 1px solid gray;
 	}
 	
-	.input-group {
+	.input-groupl {
 		margin: 10px 0px 10px 0px;
 	}
 	
-	.input-group label {
+	.input-groupl label {
 		display: block;
 		text-align: left;
 		margin: 3px;
 		padding-left: 20px;
 	}
 	
-	.btn {
+	.btnl {
 		border-radius: 5px;
 		padding: 10px;
 		color: white;
@@ -115,8 +115,23 @@ body a {
 		cursor: pointer;
 		font-weight: bolder;
 	}
+
+	.btnlanding{
+		display: inline-block;
+		background: #333;
+		color: #fff;
+		text-decoration: none;
+		padding: 1em 2em;
+		border: 1px solid #666;
+		margin: .5em 0;
+		width: 150px;
+	}
+	.btnlanding:hover {
+		background: #eaeaea;
+		color: #333;
+	}
 	
-	.btn:hover {
+	.btnl:hover {
 		background-color: #eaeaea;
 		color: black;
 	}
@@ -137,7 +152,7 @@ body a {
 		padding: 1em 0;
 	}
 	
-	.btn2 {
+	.btn2l {
 		display: inline-block;
 		background: #333;
 		color: #fff;
@@ -148,27 +163,27 @@ body a {
 		width: 70px;
 	}
 	
-	.btn2:hover {
+	.btn2l:hover {
 		background: #eaeaea;
 		color: #333;
 	}
 	
-	#showcase {
+	#showcasel {
 		min-height: 450px;
 		color: #fff;
 		text-align: center;
 	}
 	
-	.white {
+	.whitel {
 		color: #5f9ea0;
 	}
 	
-	.header-line2 {
+	.header-line2l {
 		color: #5f9ea0;
 		font-style: italic;
 	}
 	
-	#showcase {
+	#showcasel {
 		background-color: #fff;
 		background-image: url("https://samorahno.github.io/Politico/UI/images/bg2.jpg");
 		background-position: center;
@@ -180,56 +195,56 @@ body a {
 		color: black;
 	}
 	
-	#showcase .textshow {
+	#showcasel .textshowl {
 		color: black;
 	}
 	
-	#showcase.grid {
+	#showcasel.gridl {
 		color: black;
 		height: 570px;
 	}
 	
-	#showcase h1 {
+	#showcasel h1 {
 		padding-top: 100px;
 		padding-bottom: 0;
 	}
 	
-	#section-a {
+	#section-al {
 		background: #eaeaea;
 		color: #333;
 		padding-bottom: 2em;
 	}
 	
-	#section-b {
+	#section-bl {
 		padding: 2em 1em 1em;
 	}
 	
-	#section-b ul {
+	#section-bl ul {
 		list-style: none;
 		margin: 0;
 		padding: 0;
 	}
 	
-	#section-b li {
+	#section-bl li {
 		margin-bottom: 1em;
 		background: #fff;
 		color: #333;
 	}
 	
-	.card-content {
+	.card-contentl {
 		padding: 1.5em;
 	}
 	
-	#section-d .box {
+	#section-dl .boxl {
 		padding: 2em;
 		color: #fff;
 	}
 	
-	#section-d .box:first-child {
+	#section-dl .boxl:first-child {
 		background: #2690d4;
 	}
 	
-	.grid-body {
+	.grid-bodyl {
 		background-color: #eef1f7;
 		width: 80%;
 		margin-right: auto;
@@ -241,14 +256,14 @@ body a {
 		line-height: 30px;
 	}
 	
-	.grid-p {
+	.grid-pl {
 		margin-top: 20px;
 		text-align: center;
 		width: 100%;
 		padding: 0;
 	}
 	
-	#main-footer {
+	#main-footerl {
 		padding: 1.5em;
 		background: black;
 		color: white;
@@ -257,7 +272,7 @@ body a {
 		margin: 0px;
 	}
 	
-	.footer1 {
+	.footer1l{
 		height: auto;
 		position: fixed;
 		width: 100%;
@@ -268,24 +283,24 @@ body a {
 		font-family: Segoe-UI, sans-serif;
 	}
 	
-	.footer-table {
+	.footer-tablel {
 		width: 100%;
 		margin: 0;
 		padding: 0px;
 		line-height: 30px;
 	}
 	
-	.footer-td {
+	.footer-tdl {
 		width: 50%;
 		text-align: left;
 	}
 	
-	.footer-td2 {
+	.footer-td2l {
 		width: 35%;
 		text-align: right;
 	}
 	
-	.modal-window {
+	.modal-windowl {
 		position: fixed;
 		background-color: rgba(200, 200, 200, 0.75);
 		top: 0;
@@ -300,12 +315,12 @@ body a {
 		transition: all 0.3s;
 	}
 	
-	.modal-window:target {
+	.modal-windowl:target {
 		opacity: 1;
 		pointer-events: auto;
 	}
 	
-	.modal-window>div {
+	.modal-windowl>div {
 		width: 400px;
 		position: relative;
 		margin: 5% auto;
@@ -315,11 +330,11 @@ body a {
 		text-align: center;
 	}
 	
-	.modal-window header {
+	.modal-windowl header {
 		font-weight: bold;
 	}
 	
-	.modal-close {
+	.modal-closel {
 		color: #aaa;
 		line-height: 50px;
 		font-size: 80%;
@@ -331,16 +346,16 @@ body a {
 		text-decoration: none;
 	}
 	
-	.modal-close:hover {
+	.modal-closel:hover {
 		color: #000;
 	}
 	
-	.modal-window h1 {
+	.modal-windowl h1 {
 		font-size: 100%;
 		margin: 0 0 5px;
 	}
 	
-	.form-modal {
+	.form-modall {
 		width: 80%;
 		text-align: center;
 		margin-right: auto;
@@ -348,36 +363,36 @@ body a {
 		height:auto;
 	}
 	
-	.td1 {
+	.td1l {
 		padding-left: 120px;
 	}
 	
 	@media screen and (min-width:200px) {
-		.td1 {
+		.td1l {
 			padding-left: 20px;
 		}
 	}
 	
-	.tbl1 {
+	.tbl1l {
 		padding-left: 120px;
 	}
 	
-	.tbl2 {
+	.tbl2l {
 		padding-right: 70px;
 	}
 	
-	.steps {
+	.stepsl {
 		display: flex;
 		justify-content: center;
 	}
 	
-	.column.step {
+	.columnl.stepl {
 		flex-basis: 50%;
 		flex-direction: column;
 		padding: 5px 15px;
 	}
 	
-	.section-title, .section-text {
+	.section-titlel, .section-textl {
 		position: relative;
 		margin-bottom: 15px;
 		color: black;
@@ -385,24 +400,24 @@ body a {
 		padding: 5px;
 	}
 	
-	.step-title {
+	.step-titlel {
 		font-size: 30px;
 		font-weight: bolder;
 	}
 	
-	.container8 {
+	.container8l {
 		max-width: 1200px;
 		margin: 0 auto;
 	}
 	
-	.step-indicator8 {
+	.step-indicator8l {
 		margin-top: 50px;
 		display: flex;
 		align-items: center;
 		padding: 0 40px;
 	}
 	
-	.step8 {
+	.step8l {
 		display: flex;
 		align-items: center;
 		flex-direction: column;
@@ -410,7 +425,7 @@ body a {
 		z-index: 1;
 	}
 	
-	.step-indicator8 .step-icon8 {
+	.step-indicator8l .step-icon8l {
 		height: 50px;
 		width: 70px;
 		border-radius: 50%;
@@ -423,11 +438,11 @@ body a {
 		font-size: 20px;
 	}
 	
-	.step8.active .step-icon8 {
+	.step8l.active .step-icon8l {
 		background: crimson;
 	}
 	
-	.step8 p {
+	.step8l p {
 		text-align: center;
 		position: absolute;
 		bottom: -40px;
@@ -436,43 +451,43 @@ body a {
 		font-weight: bold;
 	}
 	
-	.step8.active p {
+	.step8l.active p {
 		color: crimson;
 	}
 	
-	.step8.step2 p, .step8.step3 p {
+	.step8l.step2l p, .step8.step3 p {
 		left: 50%;
 		transform: translateX(-50%);
 	}
 	
-	.indicator-line8 {
+	.indicator-line8l {
 		width: 100%;
 		height: 2px;
 		background: #c2c2c2;
 		flex: 1;
 	}
 	
-	.indicator-line8.active {
+	.indicator-line8l.active {
 		background: crimson;
 	}
 	
 	@media screen and (max-width: 500px) {
-		.step8 p {
+		.step8l p {
 			font-size: 11px;
 			bottom: -20px;
 		}
 	}
 	
-	.inline {
+	.inlinel {
 		display: inline-block;
 	}
 	
-	.footercolor {
+	.footercolorl {
 		background-color: #EFBFA8;
 		font-size: 15px;
 	}
 	
-	.headline_intro {
+	.headline_introl {
 		width: 100%;
 		display: flex;
 		margin-top: 50px;
@@ -481,37 +496,37 @@ body a {
 		text-align: center;
 	}
 	
-	.mt {
+	.mtl {
 		margin-top: 20px;
 	}
 	
-	.modaloverflow {
+	.modaloverflowl {
 		text-align: center;
 		overflow: scroll;
 	}
 	
-	.modaloverflow2 {
+	.modaloverflow2l {
 		overflow: scroll;
 	}
 	
-	.fp {
+	.fpl {
 		font-size: 15px;
 		color: #5f9ea0;
 	}
 	
-	.footer_align {
+	.footer_alignl {
 		color: gray;
 		padding-left: 15px;
 		cursor: pointer;
 	}
 	
-	.footer_align a {
+	.footer_alignl a {
 		color: gray;
 		padding-left: 15px;
 		cursor: pointer;
 	}
 	
-	.modal {
+	.modall {
 		display: none;
 		position: fixed;
 		z-index: 999;
@@ -528,7 +543,7 @@ body a {
 	
 	/* Modal Content */
 	
-	.modal-content {
+	.modal-contentl {
 		background-color: #fefefe;
 		margin: auto;
 		padding: 10px;
@@ -538,20 +553,20 @@ body a {
 	
 	/* The Close Button */
 	
-	.close {
+	.closel {
 		color: #aaaaaa;
 		float: right;
 		font-size: 20px;
 		font-weight: bold;
 	}
 	
-	.close:hover, .close:focus {
+	.closel:hover, .close:focus {
 		color: #000;
 		text-decoration: none;
 		cursor: pointer;
 	}
 	
-	.modal>div {
+	.modall>div {
 		width: 400px;
 		height: auto;
 		position: relative;
@@ -562,38 +577,38 @@ body a {
 		text-align:center;
 		}
 	
-		.modal h1 {
+		.modall h1 {
 		font-size: 100%;
 		margin: 0 0 3px;
 		}
 	
-	.info-msg,
-	.success-msg,
-	.warning-msg {
+	.info-msgl,
+	.success-msgl,
+	.warning-msgl {
 		margin: 10px 0;
 		padding: 10px;
 		border-radius: 3px 3px 3px 3px;
 		display: none;
 	}
-	.info-msg {
+	.info-msgl {
 		color: #059;
 		background-color: #BEF;
 	}
-	.success-msg {
+	.success-msgl {
 		color: #270;
 		background-color: #DFF2BF;
 	}
-	.warning-msg {
+	.warning-msgl {
 		color: #9F6000;
 		background-color: #FEEFB3;
 	}
-	.error-msg {
+	.error-msgl {
 		color: #D8000C;
 		background-color: #FFBABA;
 		
 	}
 	
-	#loader-overlay{
+	#loader-overlayl{
 			height: 100%;
 			width: 100%;
 			background: #5f9ea0;
@@ -601,7 +616,7 @@ body a {
 			left: 0;
 			top: 0px;
 	}
-	.loader{
+	.loaderl{
 			margin: 15em auto;
 			border: 16px solid #e3e3e3;
 			border-radius: 50%;
@@ -621,24 +636,34 @@ body a {
 			}
 	}
 	
-	.error-message{
+	.error-messagel{
 		color: red;
 	}
 	
-	.profile-list{
+	.profile-listl{
 		font-size: 10px;
 	}
 	
-	.profile-card{
+	.profile-cardl{
 		background-color: silver;
 	}
-	.profile-card .title {
+	.profile-cardl .titlel {
 		font-size: 10px;
 	}
-	.profile-card-image {
+	.profile-card-imagel {
 		width: 200px;
 		height: 200px;
 		object-fit: cover;
 		display: inline;
 	}
+	.toast-message {
+		text-align: center;
+	}
+}
+.footerstyle {
+	border: none;
+	padding: 20px 0 !important;
+	color: #ffffff;
+	background-color: #5f9ea0;
+	font-size:15px;
 }
